# tlsr82xx

./: Cargo.toml  README.md
examples/adc8258/: Cargo.toml  Makefile  README.md
examples/adc8258/src/: main.rs
examples/ble_beacon8258/: Cargo.toml  Makefile  README.md
examples/ble_beacon8258/src/: main.rs
examples/ble_ota_boot8258/: Cargo.toml  Makefile  README.md  build.rs
examples/ble_ota_boot8258/include/: version_cfg.h
examples/ble_ota_boot8258/src/: main.rs
examples/ble_ota_boot8258/support/: tc32_boot_init.c  tlkapi_debug_stub.c
examples/ble_ota_boot8258/vendor_ble_sample/: app.c  app_config.h  main.c
examples/ble_ota_rust8258/src/: main.rs
examples/blink8258/: Cargo.toml  Makefile  README.md  build.rs
examples/blink8258/.cargo/: config.toml
examples/blink8258/include/: app_cfg.h  board_8258_tb_03f.h  comm_cfg.h  version_cfg.h
examples/blink8258/src/: board.rs  main.rs  platform.rs  time.rs
examples/blink8258/support/: irq_handler_stub.c  memset.c  tc32_init_data_bss.c
examples/buttons8258/: Cargo.toml  Makefile  README.md
examples/buttons8258/src/: main.rs
examples/common/: boot_8258_minimal_lld.link  build_8258.rs
examples/common/include/: board_8258_tb_03f.h
examples/common/support/: adc_shim.c  cstartup_8258.S  flash_shim.c  indirect_call_r3.c  irq_entry_8258_tc32.S  irq_shim_8258_tc32.S  irq_timer0_shim_8258_tc32.S  link_cfg.S  mulsi3.c  platform_init.c  platform_init_8258.c  platform_stubs.c  tc32_boot_init.c
examples/flash8258/: Cargo.toml  Makefile  README.md
examples/flash8258/src/: main.rs
examples/i2c8258/: Cargo.toml  Makefile  README.md
examples/i2c8258/src/: main.rs
examples/pmled8258/: Cargo.toml  Makefile  README.md
examples/pmled8258/src/: main.rs  platform.rs
examples/radio8258/: Cargo.toml  Makefile  README.md
examples/radio8258/src/: main.rs
examples/radio_selftest8258/: Cargo.toml  Makefile  README.md  build.rs
examples/radio_selftest8258/src/: main.rs
examples/rgb8258/: Cargo.toml  Makefile  README.md  build.rs
examples/rgb8258/src/: main.rs  platform.rs
examples/spi8258/: Cargo.toml  Makefile  README.md
examples/spi8258/src/: main.rs
examples/stimerirq8258/: Cargo.toml  Makefile  build.rs
examples/stimerirq8258/src/: main.rs  platform.rs
examples/stimerirq8258/support/: vendor_irq_handler.c
examples/stimerpoll8258/: Cargo.toml  Makefile  build.rs
examples/stimerpoll8258/src/: main.rs  platform.rs
examples/stimerpoll8258/support/: vendor_irq_entry_8258.S
examples/timer08258/: Cargo.toml  Makefile
examples/timer08258/src/: main.rs
examples/tools/: ble_ota_smoke.py
examples/uart8258/: Cargo.toml  Makefile  README.md
examples/uart8258/src/: main.rs
examples/uartloopback8258/: Cargo.toml  Makefile  README.md
examples/uartloopback8258/src/: main.rs
tlsr82xx-ble/: Cargo.toml
tlsr82xx-ble/src/: beacon.rs  lib.rs  ota.rs
tlsr82xx-boards/: Cargo.toml
tlsr82xx-boards/src/: lib.rs  tb03f.rs
tlsr82xx-hal/: Cargo.toml  README.md  build.rs
tlsr82xx-hal/asm/: irq_entry_8258_tc32.S  irq_handler_8258_tc32.S  irq_system_timer_shim_8258_tc32.S
tlsr82xx-hal/src/: adc.rs  analog.rs  clock.rs  flash.rs  gpio.rs  i2c.rs  interrupt.rs  lib.rs  mmio.rs  pm.rs  pwm.rs  radio.rs  regs8258.rs  spi.rs  startup.rs  timer.rs  uart.rs
tlsr82xx-pac/: Cargo.toml  README.md
tlsr82xx-pac/scripts/: gen_pac.py  gen_svd.py
tlsr82xx-pac/src/: lib.rs
tlsr82xx-pac/svd/: tlsr8258.svd  tlsr826x.svd  tlsr8278.svd
