[workspace]
members = [
  "tlsr82xx-pac",
  "tlsr82xx-hal",
  "tlsr82xx-ble",
  "tlsr82xx-boards",
  "examples/adc8258",
  "examples/blink8258",
  "examples/buttons8258",
  "examples/flash8258",
  "examples/i2c8258",
  "examples/ble_beacon8258",
  "examples/ble_ota_rust8258",
  "examples/radio8258",
  "examples/radio_selftest8258",
  "examples/rgb8258",
  "examples/pmled8258",
  "examples/spi8258",
  "examples/stimerirq8258",
  "examples/uart8258",
  "examples/uartloopback8258",
  "examples/ble_ota_boot8258",
  "examples/ota_app8258",
]
resolver = "2"

[profile.dev]
panic = "abort"
opt-level = 2
debug = 1
debug-assertions = false
overflow-checks = false
codegen-units = 1
incremental = false

[profile.release]
panic = "abort"
opt-level = 2
lto = false
codegen-units = 1
