[package]
name = "tlsr82xx-adc8258"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[[bin]]
name = "tlsr82xx-adc8258"
path = "src/main.rs"

[features]
default = []

[dependencies]
embedded-hal = { path = "../../../hal_examples/embedded-hal/embedded-hal" }
tlsr82xx-hal = { path = "../../tlsr82xx-hal", features = ["chip-8258"] }
tlsr82xx-boards = { path = "../../tlsr82xx-boards", features = ["chip-8258"] }
