[package]
name = "tlsr82xx-rgb8258"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[[bin]]
name = "rgb8258"
path = "src/main.rs"

[features]
default = []

[dependencies]
tlsr82xx-hal = { path = "../../tlsr82xx-hal", features = ["chip-8258"] }
tlsr82xx-boards = { path = "../../tlsr82xx-boards", features = ["chip-8258"] }
