[package]
name = "tlsr82xx-uart8258"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[[bin]]
name = "uart8258"
path = "src/main.rs"

[features]
default = []

[dependencies]
embedded-io = "0.7"
tlsr82xx-hal = { path = "../../tlsr82xx-hal", features = ["chip-8258"] }
tlsr82xx-boards = { path = "../../tlsr82xx-boards", features = ["chip-8258"] }
